# ChalGameOfLife

./: .gitignore  CMakeLists.txt  README.md  clang-format.yaml
src/: app.cpp  app.hpp  exe.cpp  exe.hpp  gui.cpp  gui.hpp  sim.cpp  sim.hpp  top.hpp
